aws/cfn/db/template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  The primary PSQL RDS DB for the application
  - RDS Instance
  - DB SG

Parameters:
  NetworkingStack:
    Type: String
    Description: This is our base layer of networking components eg. VPC, Subnets
    Default: CrdNet
  ClusterStack:
    Type: String
    Description: This is our FargateCluster
    Default: CrdCluster
  BackupRetentionPeriod:
    Type: Number
    Default: 0
  DBInstanceClass:
    Type: String
    Default: db.t4g.micro
  DBInstanceIdentifier:
    Type: String 
    Default: cruddur-instance
  DBName:
    Type: String 
    Default: cruddur
  DeletionProtection:
    Type: String 
    AllowedValues:
      - true
      - false
    Default: false
  EngineVersion:
    Type: String 
    Default: '15.2'
  MasterUserPassword:
    Type: String
    NoEcho: true
  MasterUsername:
    Type: String
  LambdaSourceSecurityGroupId:
    Type: String

Resources:

  RDSPostgresSG:
  # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-security-group.html
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: SG for RDS 
      GroupName: !Sub "${AWS::StackName}RdsSG"
      VpcId: 
        Fn::ImportValue:
          !Sub ${NetworkingStack}VpcId
      SecurityGroupIngress:
      # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ec2-security-group-rule-1.html 
        - IpProtocol: tcp
          SourceSecurityGroupId: 
            Fn::ImportValue:
              !Sub ${ClusterStack}ServiceSecurityGroupId
          FromPort: 5432
          ToPort: 5432
          Description: ALB HTTP
        - IpProtocol: tcp
          SourceSecurityGroupId: !Ref LambdaSourceSecurityGroupId
          FromPort: 5432
          ToPort: 5432
          Description: Lambda
  
  DBSubnetGroup:
    # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-rds-dbsubnetgroup.html
    Type: AWS::RDS::DBSubnetGroup
    Properties: 
      DBSubnetGroupDescription: !Sub "${AWS::StackName}DBSubnetGroup"
      DBSubnetGroupName: !Sub "${AWS::StackName}DBSubnetGroup"
      SubnetIds:
        Fn::Split:
          - ","
          - Fn::ImportValue:
              !Sub "${NetworkingStack}PublicSubnetIds"

  Database:
    # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-rds-dbinstance.html
    Type: AWS::RDS::DBInstance
    # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-attribute-deletionpolicy.html
    DeletionPolicy: 'Snapshot'
    # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-attribute-updatereplacepolicy.html
    UpdateReplacePolicy: 'Snapshot'
    Properties:
      AllocatedStorage: '20'
      AllowMajorVersionUpgrade: true
      AutoMinorVersionUpgrade: true
      BackupRetentionPeriod: !Ref BackupRetentionPeriod
      DBInstanceClass: !Ref DBInstanceClass
      DBInstanceIdentifier: !Ref DBInstanceIdentifier
      DBName: !Ref DBName
      DBSubnetGroupName: !Ref DBSubnetGroup
      DeletionProtection: !Ref DeletionProtection
      EnablePerformanceInsights: true
      Engine: postgres
      EngineVersion: !Ref EngineVersion
      # Must be 1 to 63 letters or numbers.
      # First character must be a letter.
      # Can't be a reserved word for the chosen database engine.
      MasterUsername: !Ref MasterUsername
      # Constraints: Must contain from 8 to 128 characters.
      MasterUserPassword: !Ref MasterUserPassword
      PubliclyAccessible: true # don't enable for prod use cases
      VPCSecurityGroups:
        - !GetAtt RDSPostgresSG.GroupId
  

# Outputs:
#   ServiceSecurityGroupId:
#     Value: !GetAtt ServiceSG.GroupId
#     Export:
#       Name: !Sub "${AWS::StackName}ServiceSecurityGroupId"
